# coas

./: .gitignore
detection/: CMakeLists.txt  package.xml
detection/include/detection/: bounding_boxes.h  matching.h
detection/launch/: docking.launch  docking_experiment.launch  harbor.launch  harbor_experiment.launch  sea.launch  sea_experiment.launch  sea_tracking.launch
detection/msg/: PostsPositions.msg
detection/rviz/: docking.rviz  harbor.rviz  sea.rviz  setup.rviz
detection/src/: bounding_boxes.cpp  bounding_boxes_node.cpp  matching.cpp  matching_node.cpp
detection/tests/: tests_d2p.cpp
filtering/src/: sensor_filter.cpp  sensor_filter_node.cpp
paqueterosjavausv1/: CMakeLists.txt  package.xml
paqueterosjavausv1/msg/: EntradaDatosNavegacion.msg
sensors/: CMakeLists.txt  mock_heartbeat_server.sh  package.xml
sensors/cfg/: filtered_points.rviz
sensors/launch/: radar_ros_bridge.launch  sehirus_conversion.launch  test_heartbeat_netcat.launch  test_radar_ros_bridge.launch  test_sehirus.launch
sensors/msg/: RadarBasicTrackReport.msg  RadarExtendedTrackReport.msg  RadarHeartbeat.msg  RadarNormalTrackReport.msg  SehirusBasicTrackReport.msg  SehirusExtendedTrackReport.msg
sensors/src/: radar_ros_bridge.cpp  sehirus_conversion.cpp
tracking/: CMakeLists.txt  package.xml
tracking/launch/: obstacle_estimator_docking.launch  obstacle_estimator_docking_experiment.launch  obstacle_estimator_sea.launch  obstacle_estimator_sea_experiment.launch  sea_tracking.launch  sea_tracking_experiment.launch
tracking/msg/: AisCandidate.msg  AisCandidatesList.msg  CandidateMsg.msg  LidarCandidate.msg  LidarCandidatesList.msg  RadarCandidate.msg  RadarCandidatesList.msg
tracking/src/: boxes_tracker.cpp  (+4 more)
(+11 files in other folders)
